<?xml version="1.0"?>
<package format="2">
  <name>vicon_depthcam_calib</name>
  <version>0.0.0</version>
  <description>The vicon_depthcam_calib package, originally code by Philipp Edger</description>

  <maintainer email="ztaylor@ethz.ch">Zachary Taylor</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>minkindr</depend>
  <depend>minkindr_conversions</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
